# artificial-intelligence-ufop

./: README.md  pyproject.toml
lesson1/: main.py  utils.py
lesson2/: main.py
utils/: definitions.py
