[tool.poetry]
name = "artificial-intelligence-ufop"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas.ribeiro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
matplotlib = "^3.4.3"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
